# corpuscraft

./: .gitignore  LICENSE  MANIFEST.in  PLAN.md  PUBLISHING_GUIDE.md  README.md  example_usage.py  process_documents.py  pyproject.toml  test_parser.py
.claude/: settings.local.json
.github/workflows/: tests.yml
data/: README.md
data/processed/: 2408.09869v5.md
examples/: example_config.yaml
src/corpuscraft/: __init__.py  cli.py  config.py  models.py
src/corpuscraft/generators/: __init__.py  base.py  qa_generator.py
src/corpuscraft/llm/: __init__.py  base.py  ollama.py
src/corpuscraft/output/: __init__.py  jsonl_writer.py
src/corpuscraft/parsers/: __init__.py  docling_parser.py
tests/: README.md  __init__.py  conftest.py  test_config.py  test_generators_qa.py  test_integration.py  test_llm_ollama.py  test_output_jsonl.py  test_parsers_docling.py
tests/fixtures/: README.md  sample_config.yaml  sample_document.txt
